tests/miniJava/neg/000204_mutation.MiniJava
class java { public static static Main ( String [ ] java ) { { } } }
